create api menu func create menu
