# cmd/swag/docs/swagger.yaml
@@ -20,6 +20,23 @@ definitions:
       password:
         type: string
     type: object
+  model.MenuInput:
+    properties:
+      menu_group_name:
+        type: string
+      menu_icon:
+        type: string
+      menu_level:
+        type: integer
+      menu_name:
+        type: string
+      menu_number_order:
+        type: number
+      menu_parent_id:
+        type: string
+      menu_url:
+        type: string
+    type: object
   response.ErrorResponseData:
     properties:
       code:
@@ -268,6 +285,34 @@ paths:
       summary: RefreshToken
       tags:
       - Authenticate
+  /menu/create_menu:
+    post:
+      consumes:
+      - application/json
+      description: Menu
+      parameters:
+      - description: payload
+        in: body
+        name: payload
+        required: true
+        schema:
+          $ref: '#/definitions/model.MenuInput'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/response.ResponseData'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/response.ErrorResponseData'
+      security:
+      - BearerAuth: []
+      summary: Menu
+      tags:
+      - Menu
 security:
 - "":
   - BearerAuth
