# internal/routers/menu/menu_router.go
@@ -1,0 +1,20 @@
+package menu
+
+import (
+	"go-backend-api/internal/controller/menu"
+	"go-backend-api/internal/middlewares"
+
+	"github.com/gin-gonic/gin"
+)
+
+type MenuRouter struct{}
+
+func (ar *MenuRouter) InitAdminRouter(Router *gin.RouterGroup) {
+	// private router
+	menuRouterPrivate := Router.Group("/menu")
+	menuRouterPrivate.Use(middlewares.AuthenMiddleware())
+	{
+		menuRouterPrivate.POST("/create_menu", menu.Menus.CreateMenu)
+	}
+
+}
